test/resources/valid/com/boothj5/jarchexample/domain/Person.java
package com.boothj5.jarchexample.domain;

import com.boothj5.jarchexample.common.*;
import com.boothj5.jarchexample.dto.PersonDTO;