test/resources/invalid/com/boothj5/jarchexample/dto/PersonDTO.java
package com.boothj5.jarchexample.dto;

import com.boothj5.jarchexample.common.*;
import com.boothj5.jarchexample.application.common.StringUtil;
import com.boothj5.jarchexample.domain.Person;
import com.boothj5.jarchexample.dto.PersonDTO;
import com.boothj5.jarchexample.configuration.controller.ConfigurationController;
